# niger-economic-monitoring

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: gh-pages.yml
data/: Niger_conflict_data.csv  adm1_crop_count.csv
data/shapefiles/ner_adm_ignn_20230720_ab_shp/: NER_admbnda_adm0_IGNN_20230720.dbf  NER_admbnda_adm0_IGNN_20230720.sbn  NER_admbnda_adm0_IGNN_20230720.sbx  NER_admbnda_adm0_IGNN_20230720.shp  NER_admbnda_adm0_IGNN_20230720.shp.xml  NER_admbnda_adm0_IGNN_20230720.shx  NER_admbnda_adm1_IGNN_20230720.dbf  NER_admbnda_adm1_IGNN_20230720.sbn  NER_admbnda_adm1_IGNN_20230720.sbx  NER_admbnda_adm1_IGNN_20230720.shp  NER_admbnda_adm1_IGNN_20230720.shp.xml  NER_admbnda_adm1_IGNN_20230720.shx  NER_admbnda_adm2_IGNN_20230720.dbf  NER_admbnda_adm2_IGNN_20230720.sbn  NER_admbnda_adm2_IGNN_20230720.sbx  NER_admbnda_adm2_IGNN_20230720.shp  NER_admbnda_adm2_IGNN_20230720.shp.xml  NER_admbnda_adm2_IGNN_20230720.shx  NER_admbnda_adm3_IGNN_20230720.dbf  NER_admbnda_adm3_IGNN_20230720.sbn  NER_admbnda_adm3_IGNN_20230720.sbx  NER_admbnda_adm3_IGNN_20230720.shp  NER_admbnda_adm3_IGNN_20230720.shp.xml  NER_admbnda_adm3_IGNN_20230720.shx  NER_admbndl_admALL_IGNN_itos_20230720.dbf  NER_admbndl_admALL_IGNN_itos_20230720.sbn  NER_admbndl_admALL_IGNN_itos_20230720.sbx  NER_admbndl_admALL_IGNN_itos_20230720.shp  NER_admbndl_admALL_IGNN_itos_20230720.shp.xml  NER_admbndl_admALL_IGNN_itos_20230720.shx  (+8 more)
docs/: _config.yml  _toc.yml  data.md  team.md
notebooks/agriculture/: README.md  crop-area-zs.ipynb  drought.ipynb  evi-classification.ipynb  evi-conflict.ipynb  evi-reference-clean-dea.ipynb  evi-reference.ipynb  evi-timesat.ipynb  report.ipynb
notebooks/conflict/: Niger Conflict Data.ipynb  README.md  conflict-in-niger.ipynb
notebooks/movement/: README.md  colocation.ipynb  commuting_zones.ipynb  travel_patterns.ipynb
notebooks/nighttime-lights/: 01_download_ntl.R  02_extract_data.R  README.md  _main.R  ntl_analysis.html  ntl_analysis.qmd
notebooks/sample-indicators/: conflict-and-commuting-zones.ipynb
reports/agriculture/: report.ipynb
(+7 files in other folders)
