[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "niger_economic_monitoring"
description = "Using Alternative Data to Understand Impact of Coup and Sanctions on the Niger Economy"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["template", "reproducibility"]
authors = [{ name = "Development Data Group", email = "datalab@worldbank.org" }]
maintainers = [
	{ name = "Andres Chamorro", email = "achamorroelizond@worldbank.org" },
	{ name = "Gabriel Stefanini Vicente", email = "gvicente@worldbank.org" },
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.10"
dependencies = [
	"earthengine-api>=0.1.384",
	"folium>=0.15.1",
	"geemap>=0.30.4",
	"geopandas>=0.14.1",
	"pandas>=2", 
	"python-dotenv>= 1.0.1",
	"requests>=2.28.1",
]
[project.optional-dependencies]
docs = [
	"docutils==0.17.1",    # https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book >=1,<2",
]

[project.urls]
"Homepage" = "https://github.com/datapartnership/niger-economic-monitoring"
"Bug Reports" = "https://github.com/datapartnership/niger-economic-monitoring/issues"
"Source" = "https://github.com/datapartnership/niger-economic-monitoring"

[tool.codespell]
skip = 'docs/_build,docs/references.bib,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,"

[tool.hatch.build.targets.wheel]
packages = ["src/niger_economic_monitoring"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
